# nlp-lex

./: .gitmodules  Dockerfile  Makefile  README-cominsys.md  README.md  TODO  regex_flavour.md
atom-syntax/language-nlex/: README.md  package.json
atom-syntax/language-nlex/grammars/: nlex.cson
atom-syntax/language-nlex/settings/: language-nlex.cson
atom-syntax/language-nlex/spec/: language-nlex-spec.coffee
examples/: almost-everything.nlex  basic-quantifiers.nlex  basic-recursion.nlex  basic-subexpr-call.nlex  branch-reset.nlex  capture.nlex  character-classes.nlex  csyntax.nlex  implicit-dependency.nlex  kdef.nlex  medium-qtfs.nlex  multiline.nlex  multiple-paths-converge.nlex  multiple-paths-with-quantifier.nlex  normalisations.nlex  persian.nlex  pure_normaliser.nlex  repeat-qtf.nlex  simple-inline-code.nlex  star-mutually-recursive.nlex  test.nlex  test.nlex.postag.data.txt
postagger/: tools
postagger/nlp-tools/tools/predict/: CMakeLists.txt
postagger/nlp-tools/tools/predict/source/: libpredict.cc
proto/: compiler.py  parser.out  parsetab.py  test.nlex
src/: CMakeLists.txt  basevm.hpp  codegen.hpp  codepoints.hpp  compile.ps1  debug.hpp  deser.inc.cc  genlexer.hpp  hmm.cc  hmm.hpp  kaleid.cpp  lexer.cc  lexer.hpp  main.py  makefile  nfa.cc  nfa.hpp  optimise.tcc  parser.cc  parser.hpp  plex.py  regexp.hpp  rts.c  serialise.hpp  stopwords.list  target_triple.hpp  termdisplay.hpp  test.nlex  test_bc.h  transition.hpp  vm.hpp  wordtree.hpp  wordtree_link.cc
src/playground/: run.sh  test.c  test.ll
src/tools/: wm
src/unicode/: class.hpp  classes.hpp  emojis.hpp  gen.ctr  genemojis.ctr
tests/: list-tests  recordtest.sh  runtest.sh
tests/data/: 0009-pos.data
tests/inputs/: 0002-single-expr-quantifier.input  0003-multi-expr.input  0004-normalise.input  0005-ignore.input  0006-stopword.input  0007-inlined-match.input  0008-literal-match.input  0009-pos.input  0012-subexpr-expr.input
tests/outputs/: 0001-single-expr-literal.stdout  0002-single-expr-quantifier.stdout  0003-multi-expr.stdout  0004-normalise.stdout  0005-ignore.stdout  0006-stopword.stdout  0007-inlined-match.stdout  0008-literal-match.stdout  0009-pos.stdout  0010-pl.stdout  0011-subexpr.stdout  0012-subexpr-expr.stdout
tests/sources/: 0001-single-expr-literal.nlex  0002-single-expr-quantifier.nlex  0003-multi-expr.nlex  0004-normalise.nlex  0005-ignore.nlex  0006-stopword.nlex  0007-inlined-match.nlex  0008-literal-match.nlex  0009-pos.nlex  0010-pl.nlex  0011-subexpr.nlex  0012-subexpr-expr.nlex
tools/: watch.py  wm
web/: Dockerfile  editor.html
web/res/ace/: mode-nlex.js  mode-nsis.js
web/server/: api.ctr  config.js  models.js  nlex-wrapper.js  out.js  package-lock.json  package.json  types.js
web/server/actions/: compile-action0.js  compile-action1.js  download-action0.js  index-action0.js
web/server/endpoints/: compile.js  download.js  example.js  examples.js  index.js  run.js
web/server/utilities/: resolveDownloadReference.js  resolveJobReference.js
wrapper/c/: wrapper.c
wrapper/python/: .gitignore  LICENSE.txt  README.md  setup.py  test.json  test1.py
wrapper/python/nlex/: __init__.py  test.py
wrapper/python/nlex/wrap/: __init__.py  generator.py  nextfloat.py  token.py  wrapper.py
